# axelar-secret

./: .gitignore  WIPREADME.md
axelar-secret/: .gitignore  Cargo.toml
axelar-secret/src/: contract.rs  ibc.rs  msg.rs  state.rs
node/: index.js  package-lock.json
